# ldklite-uniffi-bindings-template

./: .gitignore  README.md
ldklite-android/: build.gradle.kts  settings.gradle.kts
ldklite-android/lib/: build.gradle.kts
ldklite-android/lib/src/main/: AndroidManifest.xml
ldklite-android/plugins/: build.gradle.kts
ldklite-android/plugins/src/main/kotlin/org/lightningdevkit/plugins/: Enums.kt  UniFfiAndroidPlugin.kt
ldklite-ffi/: Cargo.toml  build.rs  uniffi.toml
ldklite-ffi/ffi-bindgen/src/: main.rs
ldklite-ffi/src/: ldklite.udl  lib.rs
